Add Streamlit dashboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-    <header>
-        <h1>Face Mask Detection AI</h1>
+    <header style="padding: 0; position: relative; overflow: hidden; height: 250px;">
+        <img src="banner.png" alt="Face Mask AI"
+            style="width: 100%; height: 100%; object-fit: cover; opacity: 0.6; position: absolute; top: 0; left: 0;">
+        <h1 style="position: relative; z-index: 10; padding-top: 5rem;">Face Mask Detection AI</h1>
     </header>
 
     <main>
